--- a/urlap.css
+++ b/urlap.css
@@ -1,28 +1,22 @@
-body{
-    box-sizing: border-box;
-}
-main {
-  display: flex;
-  flex-wrap: wrap;
-}
 aside {
-    flex: 0 0 25%; 
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+  order: 1;
+  flex: 0 0 25%;
 
-aside div {
-    flex: 0 0 auto; 
 }
 
 article {
-    flex: 1; 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  order: 2;
+  flex: 0 0 75%;
 }
-
-article div {
-    flex: 0 0 25%; 
+fieldset{
+    padding: 15px;
+    
+}
+label{
+    font-size: 20px;
+    color: cadetblue;
+}
+legend{
+    font-size: 30px;
+    color: brown;
 }
