--- a/kozos.css
+++ b/kozos.css
@@ -1,12 +1,10 @@
 * {
     box-sizing: border-box;
 }
-
 main {
     display: flex;
     flex-wrap: wrap;
 }
-
 header,
 nav,
 footer {
@@ -16,6 +14,7 @@ footer {
   padding: 20px;
   border-radius: 15px;
   text-align: center;
+  color: #3b82f6;
 }
 
 header h1 {
