--- a/urlap.css
+++ b/urlap.css
@@ -1,22 +1,61 @@
 aside {
   order: 1;
   flex: 0 0 25%;
-
+  background-color: #1f2937;
+  padding: 30px;
+  border-radius: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 article {
   order: 2;
   flex: 0 0 75%;
+  background-color: #1f2937;
+  padding: 30px;
+  border-radius: 50px;
+  border-left: 6px solid #3b82f6;
 }
-fieldset{
-    padding: 15px;
-    
+
+fieldset {
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 20px;
 }
-label{
-    font-size: 20px;
-    color: cadetblue;
+
+label {
+  display: block;
+  padding: 5px;
+  margin-bottom: 8px;
+  color: #3b82f6;
 }
-legend{
-    font-size: 30px;
-    color: brown;
+#adatvedelem{
+  color: #3b82f6;
+}
+ul{
+  list-style: none;
+}
+ul li a{
+  color: #3b82f6;
+  text-decoration: none;
+  
+}
+ul li{
+  padding: 5px;
+}
+
+legend {
+  font-size: 30px;
+  color: #f97316;
+  transition: all 0.3s ease;
+}
+
+legend:target {
+  background-color: #3b82f6;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 10px;
+  transform: scale(1.05);
+}
+ol{
+  color: #f97316;
 }
