--- a/kozos.css
+++ b/kozos.css
@@ -4,6 +4,15 @@
 main {
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+body {
+  background-color: #121826;
+  color: #f3f4f6;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.6;
+  padding: 20px;
 }
 header,
 nav,
