--- a/urlap.css
+++ b/urlap.css
@@ -1,19 +1,25 @@
 aside {
   order: 1;
-  flex: 0 0 25%;
+  flex: 0 0 23%;
   background-color: #1f2937;
   padding: 30px;
   border-radius: 40px;
   border: 1px solid rgba(255, 255, 255, 0.1);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 article {
   order: 2;
-  flex: 0 0 75%;
+  flex: 0 0 72%;
   background-color: #1f2937;
   padding: 30px;
   border-radius: 50px;
   border-left: 6px solid #3b82f6;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 80px;
 }
 
 fieldset {
@@ -28,18 +34,22 @@ label {
   margin-bottom: 8px;
   color: #3b82f6;
 }
-#adatvedelem{
+
+#adatvedelem {
   color: #3b82f6;
 }
-ul{
+
+ul {
   list-style: none;
 }
-ul li a{
+
+ul li a {
   color: #3b82f6;
   text-decoration: none;
-  
+
 }
-ul li{
+
+ul li {
   padding: 5px;
 }
 
@@ -56,6 +66,75 @@ legend:target {
   border-radius: 10px;
   transform: scale(1.05);
 }
-ol{
+
+label[for="adatvedelem"] {
+  color: #3b82f6;
+  font-weight: bold;
+}
+
+label[for="adatvedelem"] a {
   color: #f97316;
+  text-decoration: underline;
+}
+
+
+label[for="adatvedelem"] a:hover {
+  color: #ffffff;
+}
+
+ol {
+  color: #f97316;
+}
+
+.cim {
+  text-decoration: underline;
+  color: #3b82f6;
+  font-size: 30px;
+}
+
+.alcim {
+  font-size: 20px;
+}
+
+form input[type="submit"] {
+  display: flex;
+  padding: 10px 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  background-color: #3b82f6;
+  color: white;
+  border: 1px solid #3b82f6;
+
+}
+
+form input[type="submit"]:hover {
+  background-color: #2563eb;
+}
+
+@media (max-width: 1200px) and (min-width: 901px) {
+  aside {
+    flex: 1 1 100%;
+    margin: 10px 0;
+  }
+
+  article {
+    flex: 1 1 100%;
+    margin: 10px 0;
+    border-left: 4px solid #3b82f6;
+  }
+}
+
+@media (max-width: 900px) {
+
+  aside,
+  article {
+    flex: 1 1 100%;
+    margin: 10px 0;
+  }
+
+  article {
+    border-left: none;
+    border-top: 6px solid #3b82f6;
+    border-radius: 25px;
+  }
 }
