--- a/index.css
+++ b/index.css
@@ -19,18 +19,26 @@ main {
   max-width: 1100px;
   margin: 0 auto;
 }
-
-.card-body{
-    background-image: url(Readme_kepek/MI2jd399gC.jpg);
+.card-body h5 {
+  background-color: rgba(0, 0, 0, 0.85);
+  padding-bottom: 2%;
+  margin: 0;
 }
-.card-body li{
-    color: #3b82f6;
+.card-body ul {
+  background-color: rgba(0, 0, 0, 0.85);
 }
-.card-title{
-    color: #f97316;
+.card-body ul {
+  background-color: rgba(0, 0, 0, 0.85);
 }
-
-
+.card-body {
+  background-image: url(Readme_kepek/MI2jd399gC.jpg);
+}
+.card-body li {
+  color: white;
+}
+.card-title {
+  color: #f97316;
+}
 
 article {
   flex: 2 1 600px;
@@ -40,18 +48,13 @@ article {
   border-left: 6px solid #3b82f6;
 }
 
-
-
-article h2{
+article h2 {
   color: #f97316;
   margin-bottom: 15px;
 }
 
-
-
-
 @media (max-width: 800px) {
-  article{
+  article {
     flex: 1 1 100%;
     border-radius: 20px;
   }
